objects/REVVY__MnStrategy3__c.object
<CustomObject>
    <fields>
        <fullName>Comm_Dist__c</fullName>
        <formula>Text(Distributor__r.Comm_Dist__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comm Dist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Toro Pricing Program Eligibilities</description>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Channel Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.Comm_Dist__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Account.Commercial_Distributor_Location_ID__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Account.Location__c</field>
                <operation>equals</operation>
                <value>Headquarters</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategy 3</relationshipLabel>
        <relationshipName>Toro_Pricing_Program_Eligibilities_mp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Text(Distributor__r.Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricingProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Toro Pricing Program</label>
        <referenceTo>REVVY__MnStrategy1__c</referenceTo>
        <relationshipLabel>Strategy 3</relationshipLabel>
        <relationshipName>Toro_Pricing_Program_Eligibilities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>